welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:16: error: ';' expected but ',' found.
  case "U" => recule(); recule(); recule(); recule(), recule(); recule()
                                                    ^